implement /user PATCH endpoint, fix some bugs
