# docs/swagger.json
@@ -555,7 +555,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/apihandler.updateUserInput"
                         }
                     }
                 ],
@@ -742,6 +742,47 @@
             "properties": {
                 "accessToken": {
                     "type": "string"
+                }
+            }
+        },
+        "apihandler.updateUserInput": {
+            "type": "object",
+            "required": [
+                "currentPassword"
+            ],
+            "properties": {
+                "currentPassword": {
+                    "type": "string",
+                    "maxLength": 64,
+                    "minLength": 8
+                },
+                "email": {
+                    "type": "string",
+                    "maxLength": 64
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 64,
+                    "minLength": 1
+                },
+                "passport": {
+                    "type": "string",
+                    "maxLength": 64,
+                    "minLength": 8
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 64,
+                    "minLength": 8
+                },
+                "patronymic": {
+                    "type": "string",
+                    "maxLength": 64
+                },
+                "surname": {
+                    "type": "string",
+                    "maxLength": 64,
+                    "minLength": 1
                 }
             }
         },
