# internal/apihandler/user.go
@@ -2,6 +2,7 @@ package apihandler
 
 import (
 	"bank-app-backend/internal/domain"
+	"bank-app-backend/internal/service"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -32,16 +33,17 @@ func (h *Handler) getUser(c *gin.Context) {
 		return
 	}
 
+	user.ID = 0
 	c.JSON(http.StatusOK, user)
 }
 
-type updateUserProfileInput struct {
-	Email           string  `json:"email" binding:"email,max=64"`
-	Password        string  `json:"password" binding:"min=8,max=64"`
-	Passport        string  `json:"passport" binding:"min=8,max=64"`
-	Name            string  `json:"name" binding:"min=1,max=64"`
-	Surname         string  `json:"surname" binding:"min=1,max=64"`
-	Patronymic      *string `json:"patronymic" binding:"min=1,max=64"`
+type updateUserInput struct {
+	Email           string  `json:"email" binding:"omitempty,email,max=64"`
+	Password        string  `json:"password" binding:"omitempty,min=8,max=64"`
+	Passport        string  `json:"passport" binding:"omitempty,min=8,max=64"`
+	Name            string  `json:"name" binding:"omitempty,min=1,max=64"`
+	Surname         string  `json:"surname" binding:"omitempty,min=1,max=64"`
+	Patronymic      *string `json:"patronymic" binding:"omitempty,max=64"`
 	CurrentPassword string  `json:"currentPassword" binding:"required,min=8,max=64"`
 }
 
@@ -49,7 +51,7 @@ type updateUserProfileInput struct {
 // @Security  UserBearerAuth
 // @Accept	  json
 // @Produce		json
-// @Param			input body		  string	true	"New profile data and current password"
+// @Param			input body		  updateUserInput	true	"New profile data and current password"
 // @Success		200		{object}	response "Successfully updated"
 // @Failure		401		{object}	response "Incorrect current password"
 // @Failure		400		{object}	response
@@ -58,13 +60,39 @@ type updateUserProfileInput struct {
 // @Failure		500		{object}	response
 // @Router		/user [patch]
 func (h *Handler) updateUserProfile(c *gin.Context) {
+	var input updateUserInput
+
+	if err := c.BindJSON(&input); err != nil {
+		newErrResponse(c, http.StatusBadRequest, "invalid input body", err)
+		return
+	}
+
 	userPubId, err := getUserPubId(c)
 	if err != nil {
 		newErrResponse(c, http.StatusInternalServerError, "internal server error", err)
 	}
 
-	_ = userPubId
-	// NOT IMPLEMENTED, ONLY FOR TESTS
+	err = h.service.Users.Update(c.Request.Context(), userPubId, input.CurrentPassword, service.UsersSignUpInput{
+		Email:      input.Email,
+		Password:   input.Password,
+		Passport:   input.Passport,
+		Name:       input.Name,
+		Surname:    input.Surname,
+		Patronymic: input.Patronymic,
+	})
 
-	newResponse(c, http.StatusServiceUnavailable, "not implemented")
+	if err != nil {
+		if errors.Is(err, domain.ErrUserAlreadyExists) {
+			newResponse(c, http.StatusConflict, domain.ErrUserAlreadyExists.Error())
+			return
+		} else if errors.Is(err, domain.ErrInvalidLoginCredentials) {
+			newResponse(c, http.StatusUnauthorized, domain.ErrInvalidLoginCredentials.Error())
+			return
+		}
+
+		newErrResponse(c, http.StatusInternalServerError, "internal server error", err)
+		return
+	}
+
+	newResponse(c, http.StatusOK, "updated")
 }
